# Node-Rust-Async-Comparison

./: .env  .env.example  .gitignore  LICENSE  README.md  pm2.config.js
dev_infra/: create-db.sql  docker_compose.yml
go_server/: go.mod  go.sum  main.go
go_server/config/: config.go  database.go
node_server/: index.js  package.json  pnpm-lock.yaml
rust_server/: Cargo.toml
rust_server/src/: main.rs
