[package]
name = "rust_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sqlx = {version = "0.7.4", features = ["runtime-tokio","postgres", "chrono"]}
tokio = { version = "1.38.0", features = ["full"] }
